(library
 (public_name AutomataLibrary.language)
 (name language)
 (wrapped true)
 (libraries core zutils ast)
 (modules
   frontend
   basic_typing
   character
   alphabet
   regex
   language
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_here ppx_inline_test))
 (inline_tests)
)
